# core

cmake/patches/: pybind11-fix.patch
python/: CMakeLists.txt  build_wheel.py
python/tritonserver/: CMakeLists.txt
